6711676: Numpad keys trigger more than one KeyEvent

Introduce a new sniffer based on server keymap.

Reviewed-by: art